nsis (2.46-3) experimental; urgency=low

  * Removed the option to build with the orphaned gcc-mingw32
  * Removed architecture restrictions
  * Updated to Standards-Version 3.9.1

 -- Thomas Gaugler <thomas@dadie.net>  Sat, 25 Sep 2010 15:00:24 +0000

nsis (2.46-2) unstable; urgency=low

  * Updated zlib patch with changes from upstream subversion repository
  * Made embedded inflate function compatible with zlib (Closes: #579407)
  * Exclude unneeded win32-only utilities from building
  * Build makensis and portable utilities natively for amd64

 -- Thomas Gaugler <thomas@dadie.net>  Wed, 05 May 2010 20:39:58 +0000

nsis (2.46-1) unstable; urgency=low

  [ Thomas Gaugler ]
  * New upstream release
  * Switch to 3.0 (quilt) source format
  * Use the system provided compression library of zlib
  * Switch to debhelper 7's minimal rules file mode

  [ Paul Wise ]
  * Link against the 32-bit zlib on amd64 to prevent FTBFS

 -- Thomas Gaugler <thomas@dadie.net>  Tue, 22 Dec 2009 18:53:50 +0000

nsis (2.45-1) unstable; urgency=low

  * New upstream release
  * Adopted package from Paul Wise with his permission
  * Allow building with either gcc-mingw32 (>= 4.4.0-3) or mingw32
  * Fixed occurring access violation in Math plugin once the 
    installer window is closed.

 -- Thomas Gaugler <thomas@dadie.net>  Mon, 17 Aug 2009 19:04:01 +0000

nsis (2.44-4) unstable; urgency=low

  * Brown paper bag upload
  * Actually give the option to dh_strip (closes: #519703)

 -- Paul Wise <pabs@debian.org>  Fri, 20 Mar 2009 12:07:00 +0900

nsis (2.44-3) unstable; urgency=low

  * Don't let dh_strip work on (and break) the libpluginapi.a file
    (Closes: #519703).
  * Support new nocheck option in DEB_BUILD_OPTIONS
  * Bump Standards-Version, nsis now complies

 -- Paul Wise <pabs@debian.org>  Mon, 16 Mar 2009 01:26:29 +0900

nsis (2.44-2) unstable; urgency=low

  * Woops, actually upload to unstable
  * Use dh_lintian instead of manually installing overrides